# ai-workload-platform

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: README.md  __init__.py  backends.py  harness.py  run_benchmark.py
platform-copilot/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
platform-copilot/airflow/dags/: platform_copilot_ingest.py
platform-copilot/corpus/: runbook-drift-alert.md
platform-copilot/docs/adr/: 0001-agentic-rag-architecture.md
platform-copilot/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
platform-copilot/scripts/: ask.py  ingest.py  telegram_bot.py  ui.py
platform-copilot/src/platform_copilot/: config.py  dependencies.py  main.py
platform-copilot/src/platform_copilot/models/: base.py  chunk.py  document.py
platform-copilot/src/platform_copilot/routers/: ask.py  health.py  search.py
platform-copilot/src/platform_copilot/schemas/: api.py  chunk.py  document.py
platform-copilot/src/platform_copilot/services/: chunking.py  store.py
platform-copilot/src/platform_copilot/services/agent/: graph.py  reasoning.py
platform-copilot/src/platform_copilot/services/cache/: base.py  keys.py  memory.py  redis_cache.py
platform-copilot/src/platform_copilot/services/embeddings/: base.py  fake.py  jina.py
platform-copilot/src/platform_copilot/services/eval/: metrics.py
platform-copilot/src/platform_copilot/services/ingestion/: html.py  markdown.py
platform-copilot/src/platform_copilot/services/llm/: base.py  fake.py  ollama.py
platform-copilot/src/platform_copilot/services/observability/: base.py  langfuse_sink.py  memory.py
platform-copilot/src/platform_copilot/services/opensearch/: backend.py  index.py  query.py
platform-copilot/src/platform_copilot/services/rag/: cached.py  observed.py  pipeline.py  prompt.py  render.py
platform-copilot/src/platform_copilot/services/retrieval/: backend.py  fusion.py  memory_backend.py  retriever.py
platform-copilot/tests/: test_agent.py  test_agent_engine.py  test_api.py  test_cache.py  test_chunking.py  test_embeddings.py  test_eval.py  test_fusion.py  test_health.py  test_html_ingest.py  test_markdown_ingest.py  test_observability.py  test_opensearch_query.py  test_rag_pipeline.py  test_rag_prompt.py  test_render.py  test_retriever.py  test_store.py
scripts/: evaluate.py
tests/: test_benchmark.py  test_distributed_training.py  test_finops.py  (+4 more)
(+48 files in other folders)
