[project]
name = "platform-copilot"
version = "0.1.0"
description = "Agentic RAG copilot for AI/ML platform operations"
requires-python = ">=3.12"
# Core stays light so M0–M3 install fast. Heavy / milestone-specific libraries
# live in optional-dependencies below and are pulled in only when needed.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "opensearch-py>=2.6",
    "httpx>=0.27",
    "redis>=5.2",
]

[project.optional-dependencies]
ingestion = ["docling>=2.0"]           # M1+  PDF/complex parsing (heavy: pulls torch)
ui = ["gradio>=5.0"]                    # M4   chat UI
observability = ["langfuse>=2.53"]      # M5   tracing + cost
agent = ["langgraph>=0.2"]              # M6   agentic state machine
bot = ["python-telegram-bot>=21.0"]     # M6   on-call bot

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_copilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
